<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_all"
        android:title="Все факты"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
    <item
        android:id="@+id/nav_fav"
        android:title="Избранное"
        android:icon="@android:drawable/btn_star_big_on" />
</menu>